--- a/zeal-theme.html
+++ b/zeal-theme.html
@@ -14,26 +14,38 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   :root {
 
-    --dark-primary-color: #303f9f;
-
-    --default-primary-color: #3f51b5;
-
-    --light-primary-color: #c5cae9;
-
-    --text-primary-color: #ffffff;
-
-    --accent-color: #ff4081;
-
-    --primary-background-color: #ffffff;
-
-    --primary-text-color: #212121;
-
-    --secondary-text-color: #757575;
-
-    --disabled-text-color: #bdbdbd;
-
-    --divider-color: #e0e0e0;
-
   }
+
+  html {font-size: 1em;}
+
+    body {
+      background-color: white;
+      color: #252525;
+      @apply(--zeal-font-body);
+    }
+
+    p {
+      @apply(--zeal-font-body);
+    }
+
+    h1 {
+      @apply(--zeal-font-title);
+    }
+
+    h2 {
+      @apply(--zeal-font-headline-2);
+    }
+
+    h3 {
+      @apply(--zeal-font-headline-2);
+    }
+
+    h4 {
+      @apply(--zeal-font-headline-2);
+    }
+
+    small {
+      @apply(--zeal-font-small);
+    }
 
 </style>
