adjusted headline title style

--- a/zeal-styles.html
+++ b/zeal-styles.html
@@ -26,7 +26,7 @@ available in each ones, rather than the aggregated `paper-styles.html` as a whol
 
   }
 
-  html {font-size: 1em;}
+  html {font-size: 16px;}
 
     body {
       background-color: white;
