adjusting file references to match paper-styles

--- a/zeal-color.html
+++ b/zeal-color.html
@@ -46,6 +46,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     /* usage: buttons on colored backgrounds, other ui elements */
     --zeal-color-white: #ffffff;
+
+    --zeal-color-gray-94: #eeeeee;
   }
 
 </style>
