--- a/zeal-theme.html
+++ b/zeal-theme.html
@@ -14,38 +14,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   :root {
 
+    --zeal-card: {
+      background-color: blue;
+      padding: 1.25em;
+    },
+
+    --zeal-card-header: {
+      border-top: 5px solid var(--zeal-color-night, #252525);
+    }
+
   }
-
-  html {font-size: 1em;}
-
-    body {
-      background-color: white;
-      color: #252525;
-      @apply(--zeal-font-body);
-    }
-
-    p {
-      @apply(--zeal-font-body);
-    }
-
-    h1 {
-      @apply(--zeal-font-title);
-    }
-
-    h2 {
-      @apply(--zeal-font-headline-2);
-    }
-
-    h3 {
-      @apply(--zeal-font-headline-2);
-    }
-
-    h4 {
-      @apply(--zeal-font-headline-2);
-    }
-
-    small {
-      @apply(--zeal-font-small);
-    }
 
 </style>
